prod_snapshot_2015-09-24_1030/objects/PPCOrderDetailLocation__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallExtPhone__c</fullName>
        <label>Mobile/Call Ext Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoTargets__c</fullName>
        <description>Geographic Targets</description>
        <label>Geo Targets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>Location Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Location Name Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PPCOrderDetailId__c</fullName>
        <label>PPC Order Detail</label>
        <referenceTo>PPCOrderDetail__c</referenceTo>
        <relationshipLabel>PPC Order Detail Location</relationshipLabel>
        <relationshipName>PPC_Order_Detail_Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProxyPhone__c</fullName>
        <label>Proxy Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WebsiteType__c</fullName>
        <label>Website Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proxy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>PPC Order Detail Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PPCOrderDetailLocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPC Order Detail Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>phone1</fullName>
        <active>true</active>
        <description>OR(
NOT(LEN( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;)
) = 10),
NOT(ISNUMBER(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;)
)))</description>
        <errorConditionFormula>OR(
NOT(LEN( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;)
) = 10),
NOT(ISNUMBER(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;)
)))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Invalid Phone Number - Please enter 10 characters and only numeric  characters.  If there is an extension or other comments that apply, please enter them in the notes below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone2</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(ProxyPhone__c)),
NOT(LEN( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(ProxyPhone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;) 
) = 10)),
AND(NOT(ISBLANK(ProxyPhone__c)), 
NOT(ISNUMBER( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(ProxyPhone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;) 
))))</errorConditionFormula>
        <errorDisplayField>ProxyPhone__c</errorDisplayField>
        <errorMessage>Invalid Phone Number - Please enter 10 characters and only numeric  characters.  If there is an extension or other comments that apply, please enter them in the notes below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone3</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND(NOT(ISBLANK( CallExtPhone__c )), 
NOT(LEN( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CallExtPhone__c ,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;) 
) = 10)), 
AND(NOT(ISBLANK(CallExtPhone__c)), 
NOT(ISNUMBER( 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CallExtPhone__c ,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;) 
))))</errorConditionFormula>
        <errorDisplayField>CallExtPhone__c</errorDisplayField>
        <errorMessage>Invalid Phone Number - Please enter 10 characters and only numeric  characters.  If there is an extension or other comments that apply, please enter them in the notes below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>state</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISPICKVAL(State__c,&quot;AL&quot;),
ISPICKVAL(State__c,&quot;AK&quot;),
ISPICKVAL(State__c,&quot;AR&quot;),
ISPICKVAL(State__c,&quot;AZ&quot;),

ISPICKVAL(State__c,&quot;CA&quot;),
ISPICKVAL(State__c,&quot;CO&quot;),
ISPICKVAL(State__c,&quot;CT&quot;),

ISPICKVAL(State__c,&quot;DE&quot;),
ISPICKVAL(State__c,&quot;DC&quot;),

ISPICKVAL(State__c,&quot;FL&quot;),

ISPICKVAL(State__c,&quot;GA&quot;),
ISPICKVAL(State__c,&quot;HI&quot;),

ISPICKVAL(State__c,&quot;ID&quot;),
ISPICKVAL(State__c,&quot;IL&quot;),
ISPICKVAL(State__c,&quot;IN&quot;),
ISPICKVAL(State__c,&quot;IA&quot;),

ISPICKVAL(State__c,&quot;KS&quot;),
ISPICKVAL(State__c,&quot;KY&quot;),

ISPICKVAL(State__c,&quot;LA&quot;),

ISPICKVAL(State__c,&quot;ME&quot;),
ISPICKVAL(State__c,&quot;MD&quot;),
ISPICKVAL(State__c,&quot;MA&quot;),
ISPICKVAL(State__c,&quot;MI&quot;),
ISPICKVAL(State__c,&quot;MN&quot;),
ISPICKVAL(State__c,&quot;MS&quot;),
ISPICKVAL(State__c,&quot;MO&quot;),
ISPICKVAL(State__c,&quot;MT&quot;),

ISPICKVAL(State__c,&quot;NE&quot;),
ISPICKVAL(State__c,&quot;NV&quot;),
ISPICKVAL(State__c,&quot;NH&quot;),
ISPICKVAL(State__c,&quot;NJ&quot;),
ISPICKVAL(State__c,&quot;NM&quot;),
ISPICKVAL(State__c,&quot;NY&quot;),
ISPICKVAL(State__c,&quot;NC&quot;),
ISPICKVAL(State__c,&quot;ND&quot;),

ISPICKVAL(State__c,&quot;OH&quot;),
ISPICKVAL(State__c,&quot;OK&quot;),
ISPICKVAL(State__c,&quot;OR&quot;),

ISPICKVAL(State__c,&quot;PA&quot;),
ISPICKVAL(State__c,&quot;RI&quot;),
ISPICKVAL(State__c,&quot;SC&quot;),
ISPICKVAL(State__c,&quot;SD&quot;),
ISPICKVAL(State__c,&quot;TN&quot;),
ISPICKVAL(State__c,&quot;TX&quot;),
ISPICKVAL(State__c,&quot;UT&quot;),
ISPICKVAL(State__c,&quot;VT&quot;),
ISPICKVAL(State__c,&quot;VA&quot;),

ISPICKVAL(State__c,&quot;WA&quot;),
ISPICKVAL(State__c,&quot;WV&quot;),
ISPICKVAL(State__c,&quot;WI&quot;),
ISPICKVAL(State__c,&quot;WY&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>please select a valid state abbreviation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>website</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
REGEX(Website__c, &quot;http://[0-9a-zA-Z./-]+\\.[0-9a-zA-Z/?&amp;=_#.-]+&quot;))
&amp;&amp;
NOT(
REGEX(Website__c, &quot;https://[0-9a-zA-Z./-]+\\.[0-9a-zA-Z/?&amp;=_#.-]+&quot;))</errorConditionFormula>
        <errorDisplayField>Website__c</errorDisplayField>
        <errorMessage>Please Enter A Valid Web Address (such as https://website.com OR http://website.com)</errorMessage>
    </validationRules>
</CustomObject>